[package]
name = "embassy-teensy"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[package.metadata.embassy_docs]
src_base = "https://github.com/embassy-rs/embassy/blob/embassy-teensy-v$VERSION/embassy-teensy/src/"
src_base_git = "https://github.com/embassy-rs/embassy/blob/$COMMIT/embassy-teensy/src/"
features = ["defmt", "unstable-pac", "time-driver"]
flavors = [
    { name = "teensy", target = "thumbv7em-none-eabihf" },
]

[features]
default = [ "rt", "time-driver-gpt1" ]
## Enable the IMXRT runtime.
rt = ["dep:imxrt-rt", "imxrt-ral/rt", "teensy4-bsp/rt"]

## Use GPT1 as time driver
time-driver-gpt1 = []
## Use GPT2 as time driver
time-driver-gpt2 = []

## Enable defmt
defmt = ["imxrt-log/defmt"]

[dependencies]
embassy-sync = { version = "0.5.0", path = "../embassy-sync" }
embassy-time = { version = "0.2", path = "../embassy-time", features = [ "tick-hz-1_000_000" ] }
embassy-futures = { version = "0.1.0", path = "../embassy-futures" }
embassy-hal-internal = {version = "0.1.0", path = "../embassy-hal-internal", features = ["cortex-m", "prio-bits-2"] }
embassy-embedded-hal = {version = "0.1.0", path = "../embassy-embedded-hal" }
embassy-usb-driver = {version = "0.1.0", path = "../embassy-usb-driver" }
atomic-polyfill = "1.0.1"
log = { version = "0.4.14", optional = true }
nb = "1.0.0"
cfg-if = "1.0.0"
cortex-m-rt = { version = ">=0.6.15,<0.8", features = ["device"]}
critical-section = "1.1"
futures = { version = "0.3.17", default-features = false, features = ["async-await"] }
chrono = { version = "0.4", default-features = false, optional = true }
embedded-io = { version = "0.6.0" }
embedded-io-async = { version = "0.6.1" }
embedded-storage = { version = "0.3" }
embedded-storage-async = { version = "0.4.1" }
rand_core = "0.6.4"
fixed = "1.23.1"

embedded-hal-02 = { package = "embedded-hal", version = "0.2.6", features = ["unproven"] }
embedded-hal-1 = { package = "embedded-hal", version = "=1.0.0-rc.3" }
embedded-hal-async = { version = "=1.0.0-rc.3" }
embedded-hal-nb = { version = "=1.0.0-rc.3" }

[dependencies.cortex-m]
version = "0.7.6"
features = ["critical-section-single-core"]

[dependencies.teensy4-bsp]
version = "0.4"
features = [
    # Remove me if you don't want logging.
    "usb-logging",
]

[dependencies.teensy4-fcb]
version = "0.4"

[dependencies.teensy4-panic]
version = "0.2.3"

[dependencies.imxrt-ral]
version = "0.5"
features = ["imxrt1062"]

[dependencies.imxrt-hal]
version = "0.5.3"
features = ["imxrt1060"]

[dependencies.imxrt-log]
version = "0.1"
default-features = false
features = ["usbd", "log", "defmt"]

[dependencies.imxrt-rt]
version = "0.1"
optional = true
features = ["device"]

[build-dependencies.imxrt-rt]
version = "0.1"
optional = true
features = ["device"]

[dependencies.teensy4-pins]
version = "0.3.1"

document-features = "0.2.7"

[dev-dependencies]
embassy-executor = { version = "0.4.0", path = "../embassy-executor", features = ["arch-std", "executor-thread"] }
static_cell = { version = "2" }
